# terrible

./: .gitignore  CLAUDE.md  Makefile  README.md  _terrible_main.py  pyproject.toml  terrible.spec
.claude/memory/: MEMORY.md  feedback_no_coauthor.md
.github/workflows/: auto-merge.yml  build-binary.yml  ci.yml  integration.yml  release.yml  warm-cache.yml
docs/: index.md
docs/data-sources/: apt.md  apt_key.md  apt_repository.md  assemble.md  assert.md  async_status.md  blockinfile.md  community_clickhouse_clickhouse_cfg_info.md  community_clickhouse_clickhouse_db.md  community_clickhouse_clickhouse_grants.md  community_clickhouse_clickhouse_info.md  community_clickhouse_clickhouse_quota.md  community_clickhouse_clickhouse_role.md  community_clickhouse_clickhouse_user.md  community_crypto_acme_account.md  community_crypto_acme_certificate.md  community_crypto_acme_certificate_deactivate_authz.md  community_crypto_certificate_complete_chain.md  community_crypto_luks_device.md  community_crypto_openssh_cert.md  community_crypto_openssh_keypair.md  community_crypto_openssl_csr.md  community_crypto_openssl_csr_pipe.md  community_crypto_openssl_dhparam.md  community_crypto_openssl_pkcs12.md  community_crypto_openssl_privatekey.md  community_crypto_openssl_privatekey_convert.md  community_crypto_openssl_privatekey_pipe.md  community_crypto_openssl_publickey.md  community_crypto_openssl_signature.md  community_crypto_x509_certificate.md  community_crypto_x509_certificate_convert.md  community_crypto_x509_certificate_pipe.md  community_crypto_x509_crl.md  community_dns_adguardhome_rewrite.md  community_dns_wait_for_txt.md  community_docker_docker_compose_v2.md  community_docker_docker_compose_v2_pull.md  community_docker_docker_config.md  community_docker_docker_container_copy_into.md  (+504 more)
docs/ephemeral-resources/: async_status.md  command.md  ephemeral_ping.md  expect.md  fetch.md  ping.md  raw.md  reboot.md  script.md  shell.md  tempfile.md  uri.md  wait_for.md  wait_for_connection.md
docs/resources/: add_host.md  amazon_aws_autoscaling_group.md  amazon_aws_autoscaling_group_info.md  amazon_aws_autoscaling_instance.md  amazon_aws_autoscaling_instance_info.md  amazon_aws_autoscaling_instance_refresh.md  amazon_aws_autoscaling_instance_refresh_info.md  amazon_aws_aws_az_info.md  amazon_aws_aws_caller_info.md  amazon_aws_aws_region_info.md  amazon_aws_backup_plan.md  amazon_aws_backup_plan_info.md  amazon_aws_backup_restore_job_info.md  amazon_aws_backup_selection.md  amazon_aws_backup_selection_info.md  amazon_aws_backup_tag.md  amazon_aws_backup_tag_info.md  amazon_aws_backup_vault.md  amazon_aws_backup_vault_info.md  amazon_aws_cloudformation.md  amazon_aws_cloudformation_info.md  amazon_aws_cloudtrail.md  amazon_aws_cloudtrail_info.md  amazon_aws_cloudwatch_metric_alarm.md  amazon_aws_cloudwatch_metric_alarm_info.md  amazon_aws_cloudwatchevent_rule.md  amazon_aws_cloudwatchlogs_log_group.md  amazon_aws_cloudwatchlogs_log_group_info.md  amazon_aws_cloudwatchlogs_log_group_metric_filter.md  amazon_aws_ec2_ami.md  amazon_aws_ec2_ami_info.md  amazon_aws_ec2_dedicated_host.md  amazon_aws_ec2_dedicated_host_info.md  amazon_aws_ec2_eip.md  amazon_aws_ec2_eip_info.md  amazon_aws_ec2_eni.md  amazon_aws_ec2_eni_info.md  amazon_aws_ec2_import_image.md  amazon_aws_ec2_import_image_info.md  amazon_aws_ec2_instance.md  (+9364 more)
examples/: README.md  run_example.py
examples/ansible/: site.yml
examples/cloud_vm/: main.tf
examples/parallel_tasks/: cleanup.sh  expected_outputs.json  main.tf  verify.sh
examples/task_chain/: cleanup.sh  expected_outputs.json  main.tf  verify.sh
examples/terraform/: main.tf
examples/terraform_provider/: .terraform.lock.hcl  cleanup.sh  expected_outputs.json  main.tf  terraform.tfstate  terrible_state.json  verify.sh
examples/triggers/: cleanup.sh  expected_outputs.json  main.tf  verify.sh
scripts/: check-docs.sh  generate-docs.sh  pre-commit  release.sh  start-ssh-target.sh
templates/: index.md.tmpl
templates/resources/: playbook.md.tmpl  role.md.tmpl
terrible_provider/: cli.py  discovery.py  ephemeral.py  ephemeral_ping.py  host.py  install.py  play.py  provider.py  task_base.py  task_datasource.py  vault.py
tests/: test_datasource.py  test_discovery.py  test_ephemeral.py  test_host.py  test_play.py  test_provider.py  test_task_base.py  test_vault.py
tests/integration/: conftest.py  test_cases.py
tests/integration/cases/async_task/: main.tf
tests/integration/cases/ping/: main.tf  (+3 more)
tests/integration/terraform/: main.tf
(+30 files in other folders)
