[project]
name = "terrible"
version = "0.5.3"
description = "Terraform provider that exposes Ansible modules as Terraform-managed resources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.3.0",
    "tf>=1.1.0",
]

[project.optional-dependencies]
winrm = ["pywinrm>=0.4.0"]

[project.scripts]
terraform-provider-terrible = "terrible_provider.cli:main"
install-provider = "terrible_provider.install:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["terrible_provider*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.3.0",
    "pex>=2.20.0",
    "pytest-cov>=7.0.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=terrible_provider --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/terrible_provider/cli.py",
    "*/terrible_provider/install.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
